tests/ui/typeck/external_type_clashes.stderr
error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(S2 memory a) external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(a) public {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(address payable) external pure {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function c(address payable) public pure {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(address a) external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function g(MyAddress a) external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: aborting due to 6 previous errors

